kubernetes/fondueplausch/01-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: fondueplausch

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: fondueplausch
