kubernetes/fondueplausch/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: ingressroute-fondueplausch

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fondueplausch.jubla-nz.ch`)
      kind: Rule
      services:
        - name: fondueplausch
          port: 80
  tls:
    certResolver: myresolver
